# rigol_dp832_mcp_server

./: .gitignore  README.md  __init__.py  discovery.py  example.py  find_dp832.py  mcp_rigol_dp832.py  pyproject.toml  requirements.txt  rigol_dp832.py  setup.py
.cursor/: mcp.json
rigol_dp832/: comm_base.py  find_dp832.py  rigol_dp.py  test_ip.py
